[project]
name = "ogdf-wheel"
description = "An OGDF release build packaged as ready-to-use python wheel."
version = "2022.02"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.7"
# readme = "README.md"
# keywords = ["one", "two"]
# license = { text = "BSD 3-Clause License" }
# dependencies = ["matplotlib", "annoy ~= 1.17.0"]

[tool.cibuildwheel]
build = ["cp39-*"]
# Skip 32-bit builds, musl build, and pypy builds
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*", "*pypy*"]
build-frontend = "build"
test-command = [
  "pip install ogdf-python",
  "python -m ogdf_python.info",
  "python {project}/test_layouts.py",
]

[tool.hatch.build.targets.sdist]
# include = ["/ogdf"]

[tool.hatch.build.targets.wheel]
artifacts = ["*.so", "*.dll", "*.lib"]
exclude = ["hatch_build.py"]

[tool.hatch.build.targets.wheel.shared-data]
"install" = "/"

[tool.hatch.build.targets.wheel.hooks.custom]
# path = "/hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
