[project]
name = "ogdf-wheel"
description = "An OGDF release build packaged as ready-to-use python wheel."
version = "2022.02"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.7"
# readme = "README.md"
# keywords = ["one", "two"]
# license = { text = "BSD 3-Clause License" }
# dependencies = ["matplotlib", "annoy ~= 1.17.0"]

[tool.cibuildwheel]
# ignore-vcs = true
build = ["cp310-*"]
# Skip 32-bit builds, musl build, and pypy builds
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*", "*pypy*"]
manylinux-x86_64-image = "manylinux_2_28" # manylinux2014 uses a too old gcc (wlav/cppyy#70)
build-frontend = "build"
before-build = "pip debug --verbose || true"
test-command = [
    "pip install ogdf-python || true",
    "python -m ogdf_python.info || true",
    "python {project}/test_layouts.py || true",
]

[tool.hatch.build.targets.sdist]
include = ["/ogdf"]

[tool.hatch.build.targets.wheel]
artifacts = ["*.so", "*.dll", "*.lib", "*.dylib", "!install", "LICENSE*"]
exclude = ["hatch_build.py", "test_*.py", "install"]
sources = ["install/bin", "install/include"] # windows, otherwise unset by hatch_build.py

[tool.hatch.build.targets.wheel.shared-data] # unix, otherwise unset by hatch_build.py
"install" = "/"

[tool.hatch.build.targets.wheel.hooks.custom]
# path = "/hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
