[project]
name = "ogdf-wheel"
description = "An OGDF release build packaged as ready-to-use python wheel."
version = "2022.02"
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.7"
license-files = { paths = [
    "ogdf/LICENSE.txt",
    "ogdf/LICENSE_GPL_v2.txt",
    "ogdf/LICENSE_GPL_v3.txt",
    "ogdf/include/ogdf/lib/minisat/LICENSE",
] }
# readme = "README.md"
# keywords = ["one", "two"]
# license = { text = "BSD 3-Clause License" }
# dependencies = ["matplotlib", "annoy ~= 1.17.0"]

[tool.cibuildwheel]
build = ["cp310-*"]
# Skip 32-bit builds, musl build, and pypy builds
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*", "*pypy*"]
manylinux-x86_64-image = "manylinux_2_28" # manylinux2014 uses a too old gcc (wlav/cppyy#70)
build-frontend = "build"
before-build = "pip debug --verbose"
test-command = [
    "pip install ogdf-python",
    "python -m ogdf_python.info",
    "python {project}/test_layouts.py",
]

[tool.hatch.build]
ignore-vcs = true # "install" may not be excluded, otherwise weird things happen

[tool.hatch.build.targets.sdist]
exclude = ["cmake_build", "dist", "wheelhouse", ".git*", ".idea"]

[tool.hatch.build.targets.wheel]
exclude = ["cmake_build", "dist", "wheelhouse", ".git*",
    "hatch_build.py", "test_*.py"]

[tool.hatch.build.targets.wheel.sources] # windows, otherwise unset by hatch_build.py
"install/bin" = "/"
"install/include" = "/"
"install/lib" = "/"
"install/share" = "/"

[tool.hatch.build.targets.wheel.shared-data] # unix, otherwise unset by hatch_build.py
"install" = "/"

[tool.hatch.build.targets.wheel.hooks.custom]
# path = "/hatch_build.py"

[build-system]
requires = ["hatchling"]#, "ipython"]
build-backend = "hatchling.build"
